# enpassing

./: ChangeLog.md  Enpassing.cabal  LICENSE  Makefile  README.md  enpassing.cabal  hie.yaml  music-theory.cabal  music.cabal  package.yaml  stack.yaml  stylish-haskell.yaml
app/: Main.hs  UserInterface.hs
chord-analysis/: Main.hs
demo/: KeyCenter.hs  Progression.hs
demo/Demo/: Main.hs  Progression.hs
demo/Demo/demo/Demo/: CycleZipper.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: Transposition.org  chords.org  constructors.org  degenerate.org  enharmonic_equivalents.org  interface.md  module_deps.org  musical_context.org  musical_traversable.org  none  testing.org  thoughts.org
examples/: Substitutions.hs
examples/guitar-chord-fingering/: GuitarChord.hs
lib/Music/: Parsers.hs  Theory.hs
lib/Music/Modification/: BlendChord.hs
lib/Music/Theory/: '  Accidental.hs  Chord.hs  Classes.hs  Constructors.hs  Degree.hs  Interval.hs  Key.hs  MusicalBase.hs  MusicalCtx.hs  Note.hs  Pitch.hs  Playable.hs  Quality.hs  Scale.hs  Semitones.hs  Transpose.hs
res/: blues1.txt  but_not_for_me.txt  fly_me_to_the_moon.txt  help.txt  over_the_rainbow.txt  styles.json
src/: GuitarChord.hs  Hand.hs  Main.hs  Parsers.hs  PianoChord.hs
src/Enpassing/: Changes.hs  Instances.hs  Music.hs  Parsers.hs  Playable.hs  Theory.hs  Transition.hs  UserInterface.hs
src/Enpassing/Changes/: ChordLike.hs  ChordModification.hs  ChordPredicate.hs  Interpreted.hs  JazzChange.hs  Passing.hs  Predicate.hs  Style.hs  Substitution.hs
src/Enpassing/Music/: Chord.hs  Extension.hs  Interpreted.hs  Interval.hs  Key.hs  Scale.hs  Sheet.hs
src/Enpassing/Theory/: Accidental.hs  Chord.hs  Class.hs  Degree.hs  Duration.hs  Extension.hs  Key.hs  Mode.hs  Pitch.hs  Scale.hs  Sheet.hs  TimeSignature.hs  Transpose.hs  Types.hs
src/Enpassing/Transition/: Change.hs  MusicM.hs  Predicate.hs  Style.hs  Substitution.hs
test/: README.md  Spec.hs  Test.hs  TestChord.hs  TestInterpreted.hs  TestParsers.hs  TestScale.hs  TestSheet.hs  TestUtils.hs
test/Test/: Comparators.hs  Function.hs  Generators.hs  Main.hs  Relation.hs  Spec.hs
test/Test/Enpassing/: Parsers.hs
test/Test/Enpassing/Theory/: Chord.hs  Degree.hs  Pitch.hs
test/Test/Music/: Parsers.hs
test/Test/Music/Theory/: Accidental.hs  Chord.hs  Degree.hs  Interval.hs  MusicalBase.hs  Pitch.hs  Quality.hs  Scale.hs  Transpose.hs
test/Test/hunit/: TestChord.hs  TestScale.hs  TestSheet.hs
test/Test/quickcheck/: PropInterpreted.hs  PropScale.hs
test/hunit/: TestInterpreted.hs  TestParsers.hs  TestSheet.hs
