cabal-version:       2.2

name:                music-theory
version:             0.1.0.0
-- synopsis:
-- description:

-- bug-reports:
-- license:
license-file:        LICENSE
author:              Mitch Stevens
maintainer:          mitchstevens95@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common lib
  build-depends:      base >=4.13 && <4.14, 
                      array,
                      attoparsec,
                      containers,
                      lens, 
                      lens-properties,
                      mtl, 
                      text
  default-extensions: AllowAmbiguousTypes,
                      TypeFamilies,
                      OverloadedStrings,
                      FunctionalDependencies,
                      UndecidableInstances,
                      FlexibleContexts,
                      FlexibleInstances,
                      LambdaCase,
                      MultiParamTypeClasses,
                      NoMonomorphismRestriction,
                      PatternSynonyms,
                      RankNTypes,
                      ScopedTypeVariables,
                      TypeApplications,
                      TemplateHaskell
  other-modules:      Music.Theory
                      Music.Theory.Accidental
                      Music.Theory.Chord
                      Music.Theory.Classes
                      Music.Theory.Constructors
                      Music.Theory.Degree
                      Music.Theory.Interval
                      Music.Theory.Pitch
                      Music.Theory.Quality
                      Music.Theory.Scale
                      Music.Theory.Transpose
  default-language:   Haskell2010


library
  import: lib
  other-modules:      Music.Parsers
  hs-source-dirs:     lib

test-suite test
  import: lib
  type:               exitcode-stdio-1.0
  main-is:            Test/Main.hs
  build-depends:      lens-properties,
                      hspec,
                      QuickCheck,
  other-modules:      Music.Parsers
                      Test.Comparators
  hs-source-dirs:     lib, test

executable chord-analyis
  import:             lib
  type:               exitcode-stdio-1.0
  main:               ChordAnalysis/Main.hs
  build-depends:

  hs-source-dirs:     lib, chord-analysis
    
  

