cabal-version:       2.2

name:                music-theory
version:             0.1.0.0
-- synopsis:
-- description:

-- bug-reports:
-- license:
license-file:        LICENSE
author:              Mitch Stevens
maintainer:          mitchstevens95@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common lib
  build-depends:      base >=4.13 && <4.14, 
                      array,
                      containers,
                      lens, 
                      mtl,
                      text,
                      subcategories
  default-extensions: AllowAmbiguousTypes,
                      OverloadedStrings,
                      ConstraintKinds,
                      FunctionalDependencies,
                      DerivingVia,
                      DeriveGeneric,
                      FlexibleContexts,
                      UndecidableInstances,
                      FlexibleInstances,
                      LambdaCase,
                      MultiParamTypeClasses,
                      PatternSynonyms,
                      RankNTypes,
                      ScopedTypeVariables,
                      TypeApplications,
                      TemplateHaskell
  other-modules:      Music.Theory
                      Music.Theory.Accidental
                      Music.Theory.Chord
                      Music.Theory.ChordNaming
                      Music.Theory.Classes
                      Music.Theory.Constructors
                      Music.Theory.Degree
                      Music.Theory.Interval
                      Music.Theory.MusicalBase
                      Music.Theory.Note
                      Music.Theory.Pitch
                      Music.Theory.Quality
                      Music.Theory.Scale
                      Music.Theory.Semitones
                      Music.Theory.Transpose
  default-language:   Haskell2010


library
  import: lib
  other-modules:
  hs-source-dirs:     lib

test-suite test
  import: lib
  type:               exitcode-stdio-1.0
  main-is:            Test/Main.hs
  build-depends:      QuickCheck,
                      hspec,
                      lens-properties
  other-modules:      Music.Parsers
                      Test.Comparators
                      Test.Function
                      Test.Music.Theory.Degree
                      Test.Music.Theory.Classes
                      Test.Music.Theory.Chord
                      Test.Music.Theory.Transpose
                      Test.Music.Theory.Pitch
                      Test.Music.Theory.Accidental
                      Test.Music.Theory.Interval
                      Test.Music.Theory.Semitones
  hs-source-dirs:     lib, test

executable demo-passing
  import: lib
  default-extensions: FlexibleContexts
  hs-source-dirs:     lib, examples/passing
  main-is:            Main.hs

--executable guitar-chord
--  import: lib
--  other-modules:      Hand
--                      GuitarChord
--  hs-source-dirs:     lib, examples/guitar-chord-fingering
--  main-is:            GuitarChord.hs
