name:                music

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Mitch Stevens
maintainer:          mitchstevens95@gmail.com
category:            Music
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable music
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11,
                       contravariant,
                       comonad,
                       cond,
                       containers,
                       deepseq,
                       Euterpea,
                       QuickCheck,
                       mtl,
                       parsec,
                       unliftio,
                       text,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Enpassing.Changes.ChordLike
                       Enpassing.Changes.Predicate
                       Enpassing.Changes.Interpreted
                       Enpassing.Changes.Passing
                       Enpassing.Changes.Substitution
                       Enpassing.Changes.ChordModification
                       Enpassing.Changes.Style
                       Enpassing.Music.Chord
                       Enpassing.Music.Extension
                       Enpassing.Music.Interval
                       Enpassing.Music.Key
                       Enpassing.Music.Scale
                       Enpassing.Music.Sheet
                       Enpassing.Music
                       Enpassing.Playable
                       Enpassing.Instances
                       Enpassing.Changes
                       Parsers

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >=4.10 && <4.11,
                       contravariant,
                       comonad,
                       cond,
                       containers,
                       deepseq,
                       Euterpea,
                       HUnit,
                       QuickCheck,
                       mtl,
                       parsec,
                       unliftio,
                       text,
                       transformers
  hs-source-dirs:      src, test, test/hunit, test/quickcheck
  default-language:    Haskell2010
  other-modules:       Enpassing.Music
                       Enpassing.Changes
                       Enpassing.Changes.ChordLike
                       Enpassing.Changes.JazzChange
                       Enpassing.Changes.Predicate
                       Enpassing.Changes.Passing
                       Enpassing.Changes.Substitution
                       Enpassing.Changes.Interpreted
                       Enpassing.Music.Chord
                       Enpassing.Music.Extension
                       Enpassing.Music.Interval
                       Enpassing.Music.Key
                       Enpassing.Music.Scale
                       Enpassing.Music.Sheet
                       Parsers
                       TestChord
                       TestInterpreted
                       TestParsers
                       TestScale
                       TestSheet
                       TestUtils
                       PropInterpreted
                       PropScale
